 * y values for 2D datasets in data edit dialog are inverted
 * Fix crash when constructing 2D dataset with constants
 * Fix crash when interpreting date values with unicode
 * Fix for crash when moving ellipses on broken axes
 * Fix crash when editing datetime data
 * Fix crash when renaming 2D datasets in dataset editor
 * If 2d dataset does not exist, don't crash when using colorbar

Changes in 1.21.1
 * Add swap option on keys, swapping symbol and text

Bug fixes
 * Fix missing labels if colorbar out of plot
 * Preserve tags when reloading datasets
 * Handle nan/inf/-inf when as value in UI
 * Remove dependence on pyqtconfig in build system
 * Handle errors properly in 2D CSV read
 * Do not crash if selecting siblings of document widget
 * Fix accidental modification of data by line widget
 * Improve PDF bounding box rounding to prevent chopping near edge
 * Fix function plotter in embedding
 * Fix astropy version checking
 * Fix crash for error bar in CSV with blank previous column

Changes in 1.21:
 * Add HDF5 saved document format
 * Add filled curve error bar style
 * Add fill left/right options for point plotter
 * Add filetype filters to import dialog file browser dialog
 * In file completer in import dialog, use selected tab as filter
 * Move code to use PyQt new style signals
 * Add a master color setting for xy point and nonorthpoint plot
 * Line labelling algorithm much improved in contour plots, which
   rotates text to match line angle and avoids label overlaps
 * More accurate axis tick label bounding boxes, allowing rotated
   labels to be placed close together
 * Add reflection and rotation options to vector field widget
 * Switch to scientific notation earlier when showing float settings

Bug fixes:
 * Direction combo did not work in import dialog
 * Saving text datasets did not work in Python3
 * Fix partial dataset evaluation issue when loading documents
 * 2D non-regular pixel spaced images give error if clipped in y